--- a/docs/style.css
+++ b/docs/style.css
@@ -10,17 +10,32 @@ html {
 }
 
 body {
-    width: 100%;
     min-height: 100%;
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
     line-height: 1.4;
     font-family: sans-serif;
+    margin-left: 240px;
+    padding-left: 24px;
+    background-color: #f3f5f7;
+    border-left: 24px solid #000;
+    border-right: 24px solid #000;
+    width: calc(100% - 240px);
+    flex-direction: column;
 }
-
-body > div {
-    display: none;
+body::before {
+    content: '';
+    width: calc(100% + 24px);
+    margin-left: -24px;
+    display: block;
+    height: 24px;
+    position: sticky;
+    top: 0;
+    left: 240px;
+    right: 0;
+    background-color: #000;
+    z-index: 3;
 }
 
 header {
@@ -28,12 +43,13 @@ header {
     height: 100%;
     flex-shrink: 0;
     padding-top: 64px;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     z-index: 2;
 }
 
-h1 {
+header h1 {
     background-color: gold;
     font-size: 120px;
     width: 180px;
@@ -44,15 +60,26 @@ h1 {
     justify-content: center;
     transform-origin: center;
     transform: rotate(-3deg);
+    position: relative;
+}
+header h1 small {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-size: 12px;
+    padding: 0 4px;
 }
 
-nav {
+header nav {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     font-size: 13px;
 }
-nav a {
+header nav a {
     display: inline-flex;
     align-items: center;
     height: 36px;
@@ -64,36 +91,21 @@ nav a {
     transition: background-color .3s, padding .3s;
 }
 
+main {
+    width: calc(100% + 24px);
+    margin-left: -24px;
+}
 
-nav a:hover {
+header nav a:hover {
     background-color: #000;
     padding-right: 12px;
 }
-nav .active {
+header nav .active {
     background-color: #000;
     padding: 0 26px 0 26px;
 }
-nav .active:hover {
+header nav .active:hover {
     padding: 0 26px 0 26px;
-}
-
-
-main {
-    width: calc(100% - 240px);
-    background-color: #f3f5f7;
-    border-left: 24px solid #000;
-    border-right: 24px solid #000;
-}
-main::before {
-    content: '';
-    display: block;
-    height: 24px;
-    position: sticky;
-    top: 0;
-    left: 240px;
-    right: 0;
-    background-color: #000;
-    z-index: 3;
 }
 
 
@@ -101,35 +113,39 @@ footer {
     font-size: 11px;
     color: #f3f5f7;
     height: 64px;
-    width: 100%;
+    width: calc(100% + 72px);
     line-height: 40px;
     position: sticky;
     bottom: 0;
     z-index: 1;
     text-align: right;
-    margin-left: 240px;
     padding: 0 20px;
     border-top: 24px solid #000;
     background-color: #292929;
+    order: 1000;
+    margin: 0 -24px 0 -48px;
 }
 footer b {
     color: gold;
 }
 
 
-section {
+main section {
     padding: 48px 24px 24px;
     min-height: calc(100vh - 64px);
     display: flex;
     flex-direction: column;
     gap: 12px 0;
 }
-section:first-child {
+main section:first-child {
     margin-top: -24px;
+}
+.height-auto {
+    min-height: auto;
 }
 
 
-pre {
+main pre {
     box-shadow: 0 0 0 1px #dbdada;
     height: 100%;
     width: 100%;
@@ -138,6 +154,6 @@ pre {
     white-space: pre-wrap;
     font-family: 'Courier New', Courier, monospace;
 }
-pre:empty {
+main pre:empty {
     display: none;
 }
