--- a/docs/style.css
+++ b/docs/style.css
@@ -7,6 +7,7 @@
 html {
     scroll-behavior: smooth;
     background-color: #292929;
+    height: 100%;
 }
 
 body {
@@ -117,6 +118,7 @@ footer {
     line-height: 40px;
     position: sticky;
     bottom: 0;
+    top: calc(100% - 64px);
     z-index: 1;
     text-align: right;
     padding: 0 20px;
