--- a/docs/style.css
+++ b/docs/style.css
@@ -43,7 +43,7 @@ header {
     width: 240px;
     height: 100%;
     flex-shrink: 0;
-    padding-top: 64px;
+    padding-top: 30px;
     position: fixed;
     top: 0;
     left: 0;
@@ -56,12 +56,17 @@ header h1 {
     width: 180px;
     height: 180px;
     display: flex;
-    margin: 0 auto 64px;
+    margin: 0 auto 36px;
     align-items: center;
     justify-content: center;
     transform-origin: center;
     transform: rotate(-3deg);
     position: relative;
+    will-change: transform;
+    transition: transform .3s;
+}
+header h1:hover {
+    transform: rotate(15deg);
 }
 header h1 small {
     display: flex;
@@ -76,18 +81,22 @@ header h1 small {
 
 header nav {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: flex-end;
+    justify-content: flex-end;
     font-size: 13px;
+    gap: 4px 0;
 }
 header nav a {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     height: 36px;
-    padding: 0 26px 0 12px;
+    /*padding: 0 26px 0 12px;*/
+    padding: 0 8px;
+    margin: 0 4px;
     text-decoration: none;
     color: #f3f5f7;
-    border-radius: 6px 0 0 6px;
+    border-radius: 6px;
     will-change: padding, background-color;
     transition: background-color .3s, padding .3s;
 }
@@ -98,15 +107,18 @@ main {
 }
 
 header nav a:hover {
-    background-color: #000;
-    padding-right: 12px;
+    /*background-color: #000;*/
+    background-color: rgba(0, 0, 0, .4);
+    /*padding-right: 12px;*/
 }
 header nav .active {
-    background-color: #000;
-    padding: 0 26px 0 26px;
-}
-header nav .active:hover {
-    padding: 0 26px 0 26px;
+    background-color: rgba(0, 0, 0);
+    padding: 0 12px;
+    order: -1;
+    width: 100%;
+    justify-content: flex-end;
+    border-radius: 0;
+    margin: 0;
 }
 
 
